src/components/pages/_additional-pages.scss
/* ... */
.maj-min-cert-explore__title {
  padding: 0;
  margin-bottom: rem(30);
  @include media-breakpoint-up(xxl) {
    flex: 0 1 auto;
    width: 35%;
    text-align: right;
    margin: 0;
    padding-right: rem(30);
  }
}

.maj-min-cert-program-search {
  background-color: $iastate-red;
  margin-left: rem(-36);
  margin-right: rem(-36);
  @extend %outer-pad-x;
  padding-top: rem(55);
  padding-bottom: rem(35);
  position: relative;
  @include media-breakpoint-up(md) {
    margin-left: rem(-70);
    margin-right: rem(-70);
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
    padding-bottom: rem(65);
  }
  @include media-breakpoint-up(xl) {
    margin-left: rem(-190);
    margin-right: rem(-190);
    padding-right: rem(184);
  }

  &:before {
    content: "";
    position: absolute;
    background-color: $iastate-red;
    left: -50vw;
    width: 150vw;
    top: 0;
    bottom: 0;
    z-index: -1;
  }

  .search-label {
    color: $white;
    font-size: rem(20);
    line-height: (30 / 20);
    @include media-breakpoint-up(md) {
      flex: 0 1 auto;
      width: 100%;
    }
  }
  input[type="text"] {
    border: none;
    @include media-breakpoint-up(md) {
      flex: 1 1 0px;
    }
  }

  button[type="submit"] {
    width: 100%;
    margin: rem(40) 0 0 0;
    @extend %iastate22-button--reverse;
    transition: 0.2s color ease-in-out, 0.2s background-color ease-in-out, 0.2s padding ease-in-out,
      0.2s margin-right ease-in-out;
    @include media-breakpoint-up(md) {
      flex: 0 0 auto;
      width: auto;
      margin: 0 0 0 rem(20);
    }
    &:hover {
      margin-right: -5px;
    }
  }
}

.maj-min-cert-program-search__title {
  color: $white;
  padding: 0 rem(30) 0 0;
  margin-bottom: rem(27);
  @include media-breakpoint-up(md) {
    flex: 0 1 auto;
    width: 100%;
  }
}

.maj-min-cert-program-list {
  padding-top: rem(55);
  padding-bottom: rem(55);
  @include media-breakpoint-up(xl) {
    margin-right: rem(21);
  }
  > ul {
    @include media-breakpoint-up(md) {
      column-count: 2;
      column-gap: rem(50);
      @include media-breakpoint-up(lg) {
        column-gap: rem(120);
      }
      @include media-breakpoint-up(xl) {
        column-gap: rem(240);
      }
    }
    > li {
      margin-bottom: rem(40);
      > ul {
        margin-top: rem(20);
        padding-right: rem(20);
        @include media-breakpoint-up(lg) {
          margin-top: rem(35);
        }
        > li {
          margin-bottom: rem(20);
          @include media-breakpoint-up(lg) {
            margin-bottom: rem(35);
          }
        }
      }
    }
  }
  .iastate22-link-secondary {
    margin: 0;
  }
}

.maj-min-cert-program-list__letter-label {
  padding: 0;
  margin: 0;
}

.maj-min-cert-program-list__program-type {
  margin: 0;
}

.maj-min-cert-program-list-cta--small {
  position: relative;
  margin-left: rem(-36);
  margin-right: rem(-36);
  @include media-breakpoint-up(md) {
    margin-left: rem(-70);
    margin-right: rem(-70);
  }
  @include media-breakpoint-up(xl) {
    margin-left: rem(-190);
    margin-right: rem(-190);
  }
  &:before {
    content: "";
    position: absolute;
    background-color: $off-white;
    left: -50vw;
    width: 150vw;
    top: 0;
    bottom: 0;
    z-index: -1;
  }
  .call-to-action--small {
    @include media-breakpoint-up(xl) {
      padding: rem(50) rem(190);
      justify-content: space-between;
    }
  }
  .call-to-action__copy-wrap {
    max-width: none;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    @include media-breakpoint-up(xxl) {
      width: 70%;
    }
  }
  .iastate22-button-set {
    @include media-breakpoint-up(xxl) {
      width: 30%;
    }
  }
}

// Red Background Hero - In use on the A-Z Index & Search Pages
.red-bkgrnd-hero {
  background-color: $iastate-red;
  margin: 0 rem(-36);
  padding: rem(7) rem(36) rem(40);
  position: relative;
  @include media-breakpoint-up(md) {
    margin-left: rem(-70);
    margin-right: rem(-70);
    padding: rem(17) rem(70) rem(50);
  }
  @include media-breakpoint-up(xl) {
    margin-left: rem(-190);
    margin-right: rem(-190);
    padding: rem(30) rem(82) rem(60);
  }
  &:before {
    @include media-breakpoint-up(xl) {
      content: "";
      position: absolute;
      background-color: $iastate-red;
      top: 0;
      left: -50vw;
      width: 150vw;
      bottom: 0;
      pointer-events: none;
      z-index: -1;
    }
  }
  .iastate22-breadcrumb__list {
    li {
      &:after {
        border-color: $white;
      }
      a {
        color: $white;
      }
    }
  }
}

.red-bkgrnd-hero__title {
  color: $white;
  margin: 0 0 rem(19);
  @include media-breakpoint-up(lg) {
    margin: rem(30) 0 rem(19);
  }
}

.red-bkgrnd-hero__message {
  @include media-breakpoint-up(xl) {
    margin-left: rem(110);
  }
  h2,
  p {
    color: $white;
  }
  h2 {
    padding: 0;
    margin: 0;
  }
  p {
    font-family: $typeface-sans-serif;
    font-weight: 700;
    line-height: (29 / 18);
  }
  a {
    color: $white;
    text-decoration-thickness: rem(1);
    text-underline-offset: rem(1);
    &:hover {
      color: $iastate-gold;
    }
  }
}
/* ... */

